[package]
name = "io-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
config = "0.11"
hyper-tls = "0.5.0"
env_logger = "0.9"
log = "0.4"
